samples/_failures_safe/1761193666_da116c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b8539bf.c: In function ‘main’:
./samples/SAFE/__tmp_4b8539bf.c:177:9: error: expected declaration or statement at end of input
  177 |         fclose(result_file);
      |         ^~~~~~
./samples/SAFE/__tmp_4b8539bf.c:177:9: error: expected declaration or statement at end of input
